--- a/style.css
+++ b/style.css
@@ -4,8 +4,24 @@
     margin: 0;
     padding: 0;
     display: inline;
+} 
+li {
+    float: left;
 }
+  
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
 
-.nav-list a:hover {
-    background-color: rgba(255, 0, 0, 0.359);
+li a:hover {
+    background-color: rgba(255, 0, 0, 0.323);
 }
