--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: green;
   }
   
   li {
@@ -19,9 +19,10 @@ ul {
   }
   
   li a:hover {
-    background-color: #111;
+    background-color: rgba(0, 128, 0, 0.44);
   }
   
   .active {
-    background-color: #112;
+    background-color: rgb(47, 63, 47);
   }
+
