--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
     background-color: green;
   }
   
-  .nav-item {
+.nav-item {
     float: left;
   }
   
-  .nav-item a {
+.nav-item a {
     display: block;
     color: white;
     text-align: center;
@@ -18,18 +18,45 @@
     text-decoration: none;
   }
   
-  .nav-item a:hover {
+.nav-item a:hover {
     background-color: rgba(0, 128, 0, 0.44);
   }
   
-  .active {
+.active {
     background-color: rgb(47, 63, 47);
   }
 
-  ul {
+ul {
     list-style: none;
   }
 
-  .indentedList {
+.indentedList {
     list-style-type: disc;
   }
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: green;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: rgb(47, 63, 47);
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: rgba(0, 128, 0, 0.44);
+}
